--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -25,8 +25,8 @@
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
 				        <li><label><input value="csNumber" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机号</label></li>
 				        <li><label><input value="csAccess" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >授权系统</label></li>
-				        <li><label><input value="addTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
-				        <li><label><input value="currentTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >下位机时间</label></li>
+				        <li><label><input value="addTimeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
+				        <li><label><input value="currentTimeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >下位机时间</label></li>
 				        <li><label><input value="rentFlg" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >租赁状态</label></li>
 				        <li><label><input value="warnCode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报警代码</label></li>
 				        <li><label><input value="rfid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >RFID卡号</label></li>
@@ -39,29 +39,31 @@
 				        <li><label><input value="oilCost" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >燃油量</label></li>
 				        <li><label><input value="powerReserve" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓄电量</label></li>
 				        <li><label><input value="evBattery" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >动力电池电量</label></li>
-				        <li><label><input value="chargingStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
+				        <li><label><input value="chargingStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
 				        <li><label><input value="fuelMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >油里程</label></li>
 				        <li><label><input value="elecMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >电量程</label></li>
 				        <li><label><input value="endurMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >续航里程</label></li>
 				        <li><label><input value="tempe" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >温度</label></li>
 				        <li><label><input value="gpsNum" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >卫星数量</label></li>
 				        <li><label><input value="gpsStrength" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >卫星信号强度</label></li>
-				        <li><label><input value="gpsValid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >gps有效性</label></li>
+				        <li><label><input value="gpsValidText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >gps有效性</label></li>
 				        <li><label><input value="netStrength" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络信号强度</label></li>
 				        <li><label><input value="longitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >经度</label></li>
 				        <li><label><input value="latitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >纬度</label></li>
 				        <li><label><input value="directionAngle" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >方向角度</label></li>
-				        <li><label><input value="circularMode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >循环模式</label></li>
-				        <li><label><input value="ptcStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >PTC启停</label></li>
-				        <li><label><input value="compreStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机状态</label></li>
-				        <li><label><input value="fanMode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档风量</label></li>
-				        <li><label><input value="savingMode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >省电模式</label></li>
+				        <li><label><input value="circularModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >循环模式</label></li>
+				        <li><label><input value="ptcStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >PTC启停</label></li>
+				        <li><label><input value="compreStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机状态</label></li>
+				        <li><label><input value="fanModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档风量</label></li>
+				        <li><label><input value="savingModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >省电模式</label></li>
 				        <li><label><input value="doorStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车门状态</label></li>
-				        <li><label><input value="engineStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机</label></li>
+				        <li><label><input value="engineStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机</label></li>
 				        <li><label><input value="keyStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >钥匙状态</label></li>
-				        <li><label><input value="lightStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >灯状态</label></li>
+				        <li><label><input value="gearText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档位</label></li>
+
+						<li><label><input value="lightStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >灯状态</label></li>
 				        <li><label><input value="lockStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >锁状态</label></li>
-				        <li><label><input value="netType" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
+				        <li><label><input value="netTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
 				        <li><label><input value="baseLac" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >基站LAC</label></li>
 				        <li><label><input value="baseCi" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >基站CI</label></li>
 				        <li><label><input value="curOrder" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >当前订单</label></li>
@@ -162,48 +164,59 @@
 
 	var tableId = "THistoryState";
 	var clms = [{checkbox: true}
-	  		,{field: "csNumber", title: "车机号", width: 110}
-	  		,{field: "csAccess", title: "授权系统", width: 110}
-	  		,{field: "addTime", title: "添加时间", width: 110}
-	  		,{field: "currentTime", title: "下位机时间", width: 110}
-	  		,{field: "rentFlg", title: "租赁状态", width: 110}
-	  		,{field: "warnCode", title: "报警代码", width: 110}
-	  		,{field: "rfid", title: "RFID卡号", width: 110}
-	  		,{field: "userRfid", title: "用户RFID", width: 110}
-	  		,{field: "obdMiles", title: "OBD里程", width: 110}
-	  		,{field: "engineTempe", title: "发动机温度", width: 110}
-	  		,{field: "totalMiles", title: "总里程", width: 110}
-	  		,{field: "speed", title: "车速", width: 110}
-	  		,{field: "motorSpeed", title: "转速", width: 110}
-	  		,{field: "oilCost", title: "燃油量", width: 110}
-	  		,{field: "powerReserve", title: "蓄电量", width: 110}
-	  		,{field: "evBattery", title: "动力电池电量", width: 110}
-	  		,{field: "chargingStatus", title: "充电状态", width: 110}
-	  		,{field: "fuelMiles", title: "油里程", width: 110}
-	  		,{field: "elecMiles", title: "电量程", width: 110}
-	  		,{field: "endurMiles", title: "续航里程", width: 110}
-	  		,{field: "tempe", title: "温度", width: 110}
-	  		,{field: "gpsNum", title: "卫星数量", width: 110}
-	  		,{field: "gpsStrength", title: "卫星信号强度", width: 110}
-	  		,{field: "gpsValid", title: "gps有效性", width: 110}
-	  		,{field: "netStrength", title: "网络信号强度", width: 110}
-	  		,{field: "longitude", title: "经度", width: 110}
-	  		,{field: "latitude", title: "纬度", width: 110}
-	  		,{field: "directionAngle", title: "方向角度", width: 110}
-	  		,{field: "circularMode", title: "循环模式", width: 110}
-	  		,{field: "ptcStatus", title: "PTC启停", width: 110}
-	  		,{field: "compreStatus", title: "压缩机状态", width: 110}
-	  		,{field: "fanMode", title: "档风量", width: 110}
-	  		,{field: "savingMode", title: "省电模式", width: 110}
-	  		,{field: "doorStatus", title: "车门状态", width: 110}
-	  		,{field: "engineStatus", title: "发动机", width: 110}
-	  		,{field: "keyStatus", title: "钥匙状态", width: 110}
-	  		,{field: "lightStatus", title: "灯状态", width: 110}
-	  		,{field: "lockStatus", title: "锁状态", width: 110}
-	  		,{field: "netType", title: "网络类型", width: 110}
-	  		,{field: "baseLac", title: "基站LAC", width: 110}
-	  		,{field: "baseCi", title: "基站CI", width: 110}
-	  		,{field: "curOrder", title: "当前订单", width: 110}
+
+	  		,{field: "csAccess", title: "接入商", width: 110}
+        	,{field: "csNumber", title: "车机号", width: 110}
+	  		,{field: "addTimeText", title: "接收时间", width: 110}
+	  		,{field: "currentTimeText", title: "报文时间", width: 110}
+        ,{field: "rentFlg", title: "租赁状态", width: 110}
+        	,{field: "warnCode", title: "报警码", width: 110}
+        ,{field: "rfid", title: "RFID卡号", width: 110}
+        ,{field: "userRfid", title: "用户RFID", width: 110}
+        	,{field: "obdMiles", title: "累计里程", width: 110}
+        	,{field: "engineTempe", title: "发动机温度", width: 110}
+        ,{field: "totalMiles", title: "订单总里程", width: 110}
+        	,{field: "speed", title: "车速", width: 110}
+        	,{field: "motorSpeed", title: "转速", width: 110}
+        	,{field: "oilCost", title: "燃油量", width: 110}
+        	,{field: "powerReserve", title: "小电池电量", width: 110}
+        	,{field: "evBattery", title: "SOC", width: 110}
+        	,{field: "chargingStatusText", title: "充电状态", width: 110}
+        ,{field: "fuelMiles", title: "订单油里程", width: 110}
+        ,{field: "elecMiles", title: "订单电量程", width: 110}
+        	,{field: "endurMiles", title: "续航里程", width: 110}
+        	,{field: "tempe", title: "温度", width: 110}
+        ,{field: "netStrength", title: "CSQ", width: 110}
+        ,{field: "longitude", title: "经度", width: 110}
+        ,{field: "latitude", title: "纬度", width: 110}
+        ,{field: "gpsValidText", title: "gps有效性", width: 110}
+        ,{field: "gpsStrength", title: "卫星信号强度", width: 110}
+        ,{field: "gpsNum", title: "卫星数量", width: 110}
+        ,{field: "directionAngle", title: "方向角", width: 110}
+        ,{field: "circularModeText", title: "循环模式", width: 110}
+        ,{field: "ptcStatusText", title: "PTC启停", width: 110}
+        ,{field: "compreStatusText", title: "压缩机状态", width: 110}
+        ,{field: "fanModeText", title: "档风量", width: 110}
+        ,{field: "savingModeText", title: "功耗模式", width: 110}
+        ,{field: "doorStatus", title: "车门状态", width: 110}
+        ,{field: "engineStatusText", title: "发动机状态", width: 110}
+        ,{field: "keyStatus", title: "钥匙状态", width: 110}
+        ,{field: "gearText", title: "档位", width: 110}
+        ,{field: "lightStatus", title: "车灯状态", width: 110}
+        ,{field: "lockStatus", title: "车锁状态", width: 110}
+        ,{field: "netTypeText", title: "网络类型", width: 110}
+        ,{field: "baseLac", title: "LAC", width: 110}
+        ,{field: "baseCi", title: "CI", width: 110}
+        ,{field: "curOrder", title: "订单号", width: 110}
+
+
+
+
+
+
+
+
+
     ];
 
 	var option = {
