--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/insertBatchReport.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/insertBatchReport.html
@@ -21,15 +21,11 @@
 		<link href="/css/cnmain.css" rel="stylesheet">
 	</head>
 <body >
-<br/>
-<br/>
-	<a style="margin-left:30px;"  href="http://oss-vc.oss-cn-hangzhou.aliyuncs.com/Template/excelTemplate.xls">条件模板下载(内)</a>
-	<br/>
-	<br/>
-
 	<div class="form_content">
-
-		<form  class="form-horizontal" id="addform" style="margin:15px;"  enctype="multipart/form-data" >
+		<a  href="http://oss-vc.oss-cn-hangzhou.aliyuncs.com/Template/excelTemplate.xls">条件模板下载（外）</a>
+		<br/>
+		<br/>
+		<form class="form-horizontal" id="addform" style="margin:15px;">
 
 			<div  class="form-group"  style="...">
 
@@ -45,48 +41,48 @@
 
 			</div>
 
-			<div class="form-group" id="conditionId" style="...">
+			<div class="form-group" id="conditionId" style="height:80%;">
 
 				<dl  >
-					<dt>车型</dt>
+					<dt>子域</dt>
 					<dd>
-						<input name="csvModel" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/admin/model/query">
-						<label id="csvModel-error" class="error" for="csvModel"><i class="fa fa-info-circle fieldTip">必填</i></label>
+						<input name="csmHost" placeholder="" class="form-control" >
+						<!--<label id="csmHost-error" class="error" for="csmHost"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
 					</dd>
 				</dl>
 
-
-
 				<dl  >
-					<dt>地标类型</dt>
+					<dt>终端类型</dt>
 					<dd>
-						<input name="csvLandmark" placeholder="" class="form-control searchinput" dataWhere="landmark" dataUrl="/base/dict/query">
-
+						<input name="csmTeType" placeholder="" class="form-control searchinput" dataWhere="csm_te_type" dataUrl="/base/dict/query">
+						<label id="csmTeType-error" class="error" for="csmTeType"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
 				<dl  >
-					<dt>车辆领域</dt>
+					<dt>协议类型</dt>
 					<dd>
-						<select class="form-control" name="csvDomain"  >
-							<option></option>
-							<option value="2">公共领域</option>
-							<option value="1">个人领域</option>
-							<option value="0">未知</option>
-						</select>
+						<input name="csmProtocol" placeholder="" class="form-control searchinput" dataWhere="csm_protocol"  dataUrl="/base/dict/query">
+						<label id="csmProtocol-error" class="error" for="csmProtocol"><i class="fa fa-info-circle fieldTip">必填</i></label>
+					</dd>
+				</dl>
 
+				<dl  >
+					<dt>授权系统</dt>
+					<dd>
+						<input name="csmAccess" placeholder="" class="form-control" >
+						<!--<label id="csmAccess-error" class="error" for="csmAccess"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
 					</dd>
 				</dl>
 
 				<dl  >
 					<dt>状态</dt>
 					<dd>
-						<input  name="csvStatus" placeholder="" class="form-control searchinput" dataWhere="status" dataUrl="/base/dict/query">
-						<label id="csvStatus-error" class="error" for="csvStatus"><i class="fa fa-info-circle fieldTip">必填</i></label>
+						<input name="csmStatus" placeholder="" class="form-control searchinput" dataWhere="status" dataUrl="/base/dict/query">
+						<label id="csmStatus-error" class="error" for="csmStatus"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
 
 			</div>
-
 
 			<div class="form-group windowButtonBar">
 				<div class="hr-line-dashed"></div>
@@ -96,7 +92,9 @@
 					<button class="btn btn-primary col-sm-2 col-sm-offset-2" type="button" onclick="closeTopWin();">关闭</button>
 				</div>
 			</div>
+
 		</form>
+
 	</div>
 
 	<div class="form_footer"></div>
@@ -113,78 +111,69 @@
     <script src="/js/layer/layer.js"></script>
 
 	<script type="text/javascript">
+
         $(function(){
             /**
              * 表单校验规则配置
              */
             var validateRuleConfig = {
                 rules:{
-                    "csvDomain":{
-                        "maxlength":4,
+                    "csmIccid":{
+                        "maxlength":20
+                    },
+                    "csmRemark":{
+                        "maxlength":256
+                    },
+                    "csmHost":{
+                        "maxlength":11,
                         "digits":true
                     },
-                    "csvInteriorColorCode":{
-                        "maxlength":64
-                    },
-                    "csvBataccuCode":{
-                        "maxlength":64
-                    },
-                    "csvCarNo":{
-                        "maxlength":32
-                    },
-                    "csvStatus":{
-                        "maxlength":4,
-                        "digits":true,
-                        "required":true
-                    },
-                    "csvVin":{
+                    "csmTeNo":{
                         "maxlength":32,
                         "required":true
                     },
-                    "csvAccess":{
-                        "maxlength":11,
-                        "digits":true,
+                    "csmNumber":{
+                        "maxlength":8,
                         "required":true
                     },
-                    "csvId":{
-                        "maxlength":11,
-                        "digits":true,
-                        "required":true
+                    "csmMqttFlag":{
+                        "maxlength":32
                     },
-                    "csvColorCode":{
+                    "csmTeType":{
                         "maxlength":4,
-                        "digits":true
-                    },
-                    "csvModelCodeFull":{
-                        "maxlength":128,
+                        "digits":true,
                         "required":true
+                    },"csmProtocol":{
+                        "maxlength":20,
+                        "digits":true,"required":true
                     },
-                    "csvModel":{
+                    "csmAccess":{
                         "maxlength":11,
                         "digits":true,
                         "required":true
                     },
-                    "csvModelCodeSimple":{
-                        "maxlength":64
+                    "csmStatus":{
+                        "maxlength":4,
+                        "digits":true,
+                        "required":true
                     },
-                    "csvProdDate":{
-                        "date":true
+                    "csmMobile":{
+                        "maxlength":11,
+                        "required":true
                     },
-                    "csvLandmark":{
-                        "maxlength":64
-                    },
-                    "csvCertific":{
+                    "csmMqttFlag":{
                         "maxlength":32
                     },
-                    "csvEngineNo":{
-                        "maxlength":32
+                    "csmId":{
+                        "maxlength":11,
+                        "digits":true,
+                        "required":true
                     }
                 }
             };
-
             var define = {
                 form:$("#addform"),
-                url:getServUrl("/admin/vehicle/insertBatch"),
+                url:getServUrl("/admin/machine/insertBatch"),
                 validateRuleConfig:validateRuleConfig,
                 valid:function(){
                     return this.form.validate(this.validateRuleConfig);
@@ -206,39 +195,39 @@
                 submit:function(){
 //                    var queryJson = getFormData(this.form);
 //                    console.log("validate success! ===>"+queryJson);
-//                    ajaxRequest(this.url, "POST", queryJson, function(json) {
+//                                      ajaxRequest(this.url, "POST", queryJson, function(json) {
 //                        console.log(json);
 //                        closeTopWin(true);
 //                    });
-                    $("#fileTypeError").html('');
-                    var fileName = $('#fileUpload').val();　　　　　　　　　　　　　　　　　　//获得文件名称
-                    var fileType = fileName.substr(fileName.length-4,fileName.length);　　//截取文件类型,如(.xls)
-                    if(fileType=='xls' || fileType=='xlsx' ){　　　　　//验证文件类型,此处验证也可使用正则
-                        var token = cookieUtil.get("token");
-                        $.ajax({
-                            url: this.url,　　　　　　　　　　//上传地址
-                            type: 'POST',
-                            data:   new FormData($('#addform')[0]),
-                            async: false,
-                            cache: false,
-                            contentType: false,
-                            processData: false,
-                            dataType: "json",
-                            headers: {'Authorization': token},
-                            success:function(data){
-                                if(data=='fileTypeError'){
-                                    $("#fileTypeError").html('*上传文件类型错误,支持类型: .xls .xlsx');　　//根据后端返回值,回显错误信息
-                                }
-                                $("input[name='enclosureCode']").attr('value',data);
-                            },
-                        });
-                        closeTopWin(true);
-                    }else{
-                        $("#fileTypeError").html('*上传文件类型错误,支持类型:.xls .xlsx');
-                    }
-                }
-            };
+
+					$("#fileTypeError").html('');
+					var fileName = $('#fileUpload').val();　　　　　　　　　　　　　　　　　　//获得文件名称
+					var fileType = fileName.substr(fileName.length-4,fileName.length);　　//截取文件类型,如(.xls)
+					if(fileType=='xls' || fileType=='xlsx' ){　　　　　//验证文件类型,此处验证也可使用正则
+						$.ajax({
+							url: this.url,　　　　　　　　　　//上传地址
+							type: 'POST',
+							data:   new FormData($('#addform')[0]),
+							async: false,
+							cache: false,
+						   contentType: false,
+							processData: false,
+							dataType: "json",
+							success:function(data){
+								if(data=='fileTypeError'){
+									$("#fileTypeError").html('*上传文件类型错误,支持类型: .xls .xlsx');　　//根据后端返回值,回显错误信息
+								}
+								$("input[name='enclosureCode']").attr('value',data);
+							},
+						});
+						closeTopWin(true);
+					}else{
+						$("#fileTypeError").html('*上传文件类型错误,支持类型:.xls .xlsx');
+					}
+				}
+			};
             define.init();
         });
+
 	</script>
 </body>
