--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/insertBatchReport.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/insertBatchReport.html
@@ -27,10 +27,7 @@
 		<br/>
 		<form  class="form-horizontal" id="addform" style="margin:15px;" enctype="multipart/form-data" >
 			<div class="form-group" id="conditionId" style="height:80%;">
-
-				<input  name="model" value="2" hidden /><!-- model  1=对内 ， 2=对外 -->
-				<input placeholder="" style="width:30%;"  maxlength="30" size="30" type="file" class="form-control searchinput" id="file_upload"  name="file" /><!-- 定义change事件,选择文件后触发 -->
-				<input type="hidden" name="modelName" value="famoxuke" />     <!-- 项目需求字段,非必须 -->
+				<input placeholder="" style="width:30%;"  maxlength="30" size="30" type="file" class="form-control searchinput" id="fileUpload"  name="fileUpload" /><!-- 定义change事件,选择文件后触发 -->
 				<br/><span style="color: red" id="fileTypeError"></span>　　　　<!-- onchange="fileChange('${base }')"文件类型错误回显,此处通过前后端两次验证文件类型 -->
 
 			</div>
@@ -39,7 +36,7 @@
 			<div class="form-group windowButtonBar">
 				<div class="hr-line-dashed"></div>
 				<div class="col-sm-10 col-sm-offset-1">
-					<button class="btn btn-primary col-sm-2" type="button" onclick="fileChange()">保存</button>
+					<button class="btn btn-primary col-sm-2" type="button" id="saveBtn">保存</button>
 					<button class="btn btn-white col-sm-2 col-sm-offset-2" type="reset">清空</button>
 					<button class="btn btn-primary col-sm-2 col-sm-offset-2" type="button" onclick="closeTopWin();">关闭</button>
 				</div>
@@ -61,32 +58,132 @@
     <script src="/js/layer/layer.js"></script>
 
 	<script type="text/javascript">
-
-        function fileChange(){
-            $("#fileTypeError").html('');
-            var fileName = $('#file_upload').val();　　　　　　　　　　　　　　　　　　//获得文件名称
-            var fileType = fileName.substr(fileName.length-4,fileName.length);　　//截取文件类型,如(.xls)
-            if(fileType=='xls' || fileType=='xlsx' ){　　　　　//验证文件类型,此处验证也可使用正则
-                $.ajax({
-                    url: "/admin/vehicle/insertBatch",　　　　　　　　　　//上传地址
-                    type: 'POST',
-                    data:   new FormData($('#addform')[0]),
-                    async: false,
-                    cache: false,
-                   contentType: false,
-                    processData: false,
-                    success:function(data){
-                        if(data=='fileTypeError'){
-                            $("#fileTypeError").html('*上传文件类型错误,支持类型: .xls .xlsx');　　//根据后端返回值,回显错误信息
-                        }
-                        $("input[name='enclosureCode']").attr('value',data);
+        $(function(){
+            /**
+             * 表单校验规则配置
+             */
+            var validateRuleConfig = {
+                rules:{
+                    "csvDomain":{
+                        "maxlength":4,
+                        "digits":true
                     },
-                });
-                closeTopWin(true);
-            }else{
-                $("#fileTypeError").html('*上传文件类型错误,支持类型:.xls .xlsx');
-            }
+                    "csvInteriorColorCode":{
+                        "maxlength":64
+                    },
+                    "csvBataccuCode":{
+                        "maxlength":64
+                    },
+                    "csvCarNo":{
+                        "maxlength":32
+                    },
+                    "csvStatus":{
+                        "maxlength":4,
+                        "digits":true,
+                        "required":true
+                    },
+                    "csvVin":{
+                        "maxlength":32,
+                        "required":true
+                    },
+                    "csvAccess":{
+                        "maxlength":11,
+                        "digits":true,
+                        "required":true
+                    },
+                    "csvId":{
+                        "maxlength":11,
+                        "digits":true,
+                        "required":true
+                    },
+                    "csvColorCode":{
+                        "maxlength":4,
+                        "digits":true
+                    },
+                    "csvModelCodeFull":{
+                        "maxlength":128,
+                        "required":true
+                    },
+                    "csvModel":{
+                        "maxlength":11,
+                        "digits":true,
+                        "required":true
+                    },
+                    "csvModelCodeSimple":{
+                        "maxlength":64
+                    },
+                    "csvProdDate":{
+                        "date":true
+                    },
+                    "csvLandmark":{
+                        "maxlength":64
+                    },
+                    "csvCertific":{
+                        "maxlength":32
+                    },
+                    "csvEngineNo":{
+                        "maxlength":32
+                    }
+                }
+            };
 
-        }
+            var define = {
+                form:$("#addform"),
+                url:getServUrl("/admin/vehicle/insertBatch"),
+                validateRuleConfig:validateRuleConfig,
+                valid:function(){
+                    return this.form.validate(this.validateRuleConfig);
+                },
+                init:function(option){
+                    var o = $.extend(this, option);
+                    $(".searchinput").each(function(){
+                        $(this).searchinput({});
+                    });
+                    $(".i-checks").iCheck({checkboxClass: "icheckbox_square-green", radioClass: "iradio_square-green",});
+                    $("#saveBtn").click(function(){
+                        if(o.valid().form()) {
+                            o.submit(o.form);
+                        }else{
+                            console.log("validate failure!");
+                        }
+                    });
+                },
+                submit:function(){
+//                    var queryJson = getFormData(this.form);
+//                    console.log("validate success! ===>"+queryJson);
+//                    ajaxRequest(this.url, "POST", queryJson, function(json) {
+//                        console.log(json);
+//                        closeTopWin(true);
+//                    });
+                    $("#fileTypeError").html('');
+                    var fileName = $('#fileUpload').val();　　　　　　　　　　　　　　　　　　//获得文件名称
+                    var fileType = fileName.substr(fileName.length-4,fileName.length);　　//截取文件类型,如(.xls)
+                    if(fileType=='xls' || fileType=='xlsx' ){　　　　　//验证文件类型,此处验证也可使用正则
+                        var token = cookieUtil.get("token");
+                        $.ajax({
+                            url: this.url,　　　　　　　　　　//上传地址
+                            type: 'POST',
+                            data:   new FormData($('#addform')[0]),
+                            async: false,
+                            cache: false,
+                            contentType: false,
+                            processData: false,
+                            dataType: "json",
+                            headers: {'Authorization': token},
+                            success:function(data){
+                                if(data=='fileTypeError'){
+                                    $("#fileTypeError").html('*上传文件类型错误,支持类型: .xls .xlsx');　　//根据后端返回值,回显错误信息
+                                }
+                                $("input[name='enclosureCode']").attr('value',data);
+                            },
+                        });
+                        closeTopWin(true);
+                    }else{
+                        $("#fileTypeError").html('*上传文件类型错误,支持类型:.xls .xlsx');
+                    }
+                }
+            };
+            define.init();
+        });
 	</script>
 </body>
