--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
@@ -109,7 +109,7 @@
   var tableId = "TCsLogger";
   var clms = [{checkbox: true}
     , {field: "teNumber", title: "车机号", width: 120, sort: true}
-    , {field: "vin", title: "车辆", width: 200, sort: true}
+    , {field: "vin", title: "车架号", width: 200, sort: true}
     , {field: "orderNo", title: "订单号", width: 110, sort: true}
     , {field: "logInfo", title: "日志信息", width: 350, sort: true}
     , {field: "sourceHex", title: "原始数据", width: 500, sort: true}
